--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/pages/home/styles/globalStyles.css" />
-    <link rel="stylesheet" href="/pages/home/styles/aside.css" />
+    <link rel="stylesheet" href="./pages/home/styles/globalStyles.css" />
+    <link rel="stylesheet" href="./pages/home/styles/aside.css" />
     <link
       rel="shortcut icon"
       href="/assets/img/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/pages/home/styles/header.css"/>
-    <link rel="stylesheet" href="/pages/home/styles/main.css"/>
+    <link rel="stylesheet" href="./pages/home/styles/header.css"/>
+    <link rel="stylesheet" href="./pages/home/styles/main.css"/>
     <title>Webwomen</title>
     <!--perguntar como faz pra deixar minha imagem do header escura como esta no figma-->
     <meta
@@ -26,7 +26,7 @@
     <header>
       <img
         class="imagemheader"
-        src="../../assets/img/header-bg.png"
+        src="./assets/img/header-bg.png"
         alt="lugar de mulher é onde ela quiser"
       />
       <div class="container_descricao_header">
@@ -55,7 +55,7 @@
    
     
     
-    <script src="./scripts/jobsData.js"></script>
-    <script src="./scripts/card.js"></script>
+    <script src="./pages/home/scripts/jobsData.js"></script>
+    <script src="./pages/home/scripts/card.js"></script>
   </body>
 </html>
